[tool.poetry]
name = "pers-helper"
version = "0.1.0"
description = ""
authors = ["Vel-Vladimir <vel.vlad.optimus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
prettytable = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
